--- a/frontendCatalogo/view/html/pgPrincipal.html
+++ b/frontendCatalogo/view/html/pgPrincipal.html
@@ -13,6 +13,7 @@
       <img src="../imgs/discoparado.png" alt="">
     </div>
     <div class="paiOpcoes">
+      <img src="" alt="">
       <div class="divOpcoes">
         <h1>Discoteca D'Carmo</h1>
         <div class="opcoes">
