--- a/frontendCatalogo/view/css/pgOp.css
+++ b/frontendCatalogo/view/css/pgOp.css
@@ -84,23 +84,14 @@ img {
   border-radius: 50px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-direction: column;
   color: rgb(167, 0, 0);
-  font-size: 30px;
-
-}
-
-.opcoes{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: column;
-  gap: 5px;
+  font-size: 1rem;
 }
 
 a{
-  font-size: 40px;
+  font-size: 2rem;
   color: rgb(104, 0, 0);
   text-decoration: none;
   transform: perspective(600px) translateZ(0);
@@ -111,6 +102,14 @@ a:hover{
   color: rgb(255, 0, 0);
   transform: perspective(600px) translateZ(50px); 
 
+}
+
+.opcoes{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 5px;
 }
 
 @keyframes rotacao {
